adding pre-commit hooks

--- a/nb_experiments.ipynb
+++ b/nb_experiments.ipynb
@@ -403,7 +403,10 @@
      "text": [
       "  0%|          | 0/500 [00:00<?, ?it/s]/Users/mariadancianu/Desktop/Git Projects/SQuAD_RAG_experiments/rag_fine_tuning.py:263: LangChainDeprecationWarning: The class `Chroma` was deprecated in LangChain 0.2.9 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-chroma package and should be used instead. To use it run `pip install -U :class:`~langchain-chroma` and import as `from :class:`~langchain_chroma import Chroma``.\n",
       "  db = Chroma(\n",
-      " 20%|█▉        | 99/500 [01:25<06:16,  1.06it/s]"
+      " 25%|██▌       | 126/500 [01:50<04:56,  1.26it/s]/Users/mariadancianu/Desktop/Git Projects/SQuAD_RAG_experiments/.venv/lib/python3.12/site-packages/langchain_core/vectorstores/base.py:1076: UserWarning: Relevance scores must be between 0 and 1, got [(Document(metadata={'start_index': 620, 'title': 'Sky_(United_Kingdom)'}, page_content='.'), -0.17899857574216305), (Document(metadata={'start_index': 568, 'title': 'Sky_(United_Kingdom)'}, page_content='.'), -0.17899857574216305), (Document(metadata={'start_index': 564, 'title': 'Victoria_(Australia)'}, page_content='.'), -0.17899857574216305)]\n",
+      "  self.vectorstore.similarity_search_with_relevance_scores(\n",
+      "No relevant docs were retrieved using the relevance score threshold 0.1\n",
+      " 49%|████▉     | 246/500 [04:09<06:10,  1.46s/it]"
      ]
     }
    ],
@@ -564,7 +567,7 @@
     "    \"embed_options\": { \n",
     "        \"text-embedding-3-large\": \"OpenAI\", \n",
     "        },\n",
-    "    \"models\": {\"mistral-large-latest\": \"mistral\"}\n",
+    "    \"models\": {\"mistral-large-latest\": \"Mistral\"}\n",
     "}\n",
     "\n",
     "results_folder = os.path.join(os.getcwd(), \"eval_results/optimize_results\")\n",
@@ -604,9 +607,9 @@
     "parameters_dict = {\n",
     "    \"chunk_sizes\": [400],\n",
     "    \"embed_options\": { \n",
-    "        \"Snowflake/snowflake-arctic-embed-l-v2.0\": \"HuggingFace_SentenceTransformers\" # ranked 6th, 568M params, released in december 2024 \n",
+    "        \"Snowflake/snowflake-arctic-embed-l-v2.0\": \"SentenceTransformers\" # ranked 6th, 568M params, released in december 2024 \n",
     "        },\n",
-    "    \"models\": {\"gpt-3.5-turbo\": \"openai\"}\n",
+    "    \"models\": {\"gpt-3.5-turbo\": \"OpenAI\"}\n",
     "}\n",
     "\n",
     "results_folder = os.path.join(os.getcwd(), \"eval_results/optimize_results\")\n",
