replace fine tuning with optimization

--- a/nb_experiments.ipynb
+++ b/nb_experiments.ipynb
@@ -14,7 +14,7 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "from tqdm.auto import tqdm\n",
-    "from rag_fine_tuning import convert_knowledge_base_to_langchain_docs, fine_tune_rag\n",
+    "from rag_optimization import convert_knowledge_base_to_langchain_docs, optimize_rag_parameters\n",
     "from data_utils import convert_json_to_dataframe, create_json_subset, collect_all_results, merge_results\n",
     "sns.set_style(\"whitegrid\")\n",
     "from langchain_openai import OpenAIEmbeddings\n",
@@ -217,7 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from rag_fine_tuning import CustomRAG, prompt_message, convert_knowledge_base_to_langchain_docs\n",
+    "from rag_optimization import CustomRAG, prompt_message, convert_knowledge_base_to_langchain_docs\n",
     "\n",
     "parameters_dict = {\n",
     "    \"chunk_size\": 400,\n",
@@ -374,10 +374,12 @@
     "\n",
     "langchain_docs = convert_knowledge_base_to_langchain_docs(df)\n",
     "\n",
-    "fine_tune_rag(df_to_test, \n",
-    "              langchain_docs, \n",
-    "              results_folder=\"eval_results/test_new_class\", \n",
-    "              vector_db_folder=\"vector_databases/test_new_class\",)"
+    "optimize_rag_parameters(\n",
+    "    df_to_test, \n",
+    "    langchain_docs, \n",
+    "    results_folder=\"eval_results/test_new_class\", \n",
+    "    vector_db_folder=\"vector_databases/test_new_class\",\n",
+    ")"
    ]
   },
   {
@@ -539,11 +541,13 @@
     "\n",
     "langchain_docs = convert_knowledge_base_to_langchain_docs(df)\n",
     "\n",
-    "fine_tune_rag(df_to_test, \n",
-    "              langchain_docs, \n",
-    "              parameters_dict,\n",
-    "              results_fodler=results_folder, \n",
-    "              vector_db_folder=vector_db_folder)"
+    "optimize_rag_parameters(\n",
+    "    df_to_test, \n",
+    "    langchain_docs, \n",
+    "    parameters_dict,\n",
+    "    results_fodler=results_folder, \n",
+    "    vector_db_folder=vector_db_folder\n",
+    ")"
    ]
   },
   {
@@ -591,11 +595,13 @@
     "\n",
     "langchain_docs = convert_knowledge_base_to_langchain_docs(df)\n",
     "\n",
-    "fine_tune_rag(df_to_test, \n",
-    "              langchain_docs, \n",
-    "              parameters_dict,\n",
-    "              results_fodler=results_folder, \n",
-    "              vector_db_folder=vector_db_folder)"
+    "optimize_rag_parameters(\n",
+    "    df_to_test, \n",
+    "    langchain_docs, \n",
+    "    parameters_dict,\n",
+    "    results_fodler=results_folder, \n",
+    "    vector_db_folder=vector_db_folder\n",
+    ")"
    ]
   }
  ],
