fix rag usage in streamlit app and added spinner

--- a/nb_experiments.ipynb
+++ b/nb_experiments.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b0accd0d-fb0b-4c5e-be02-8063d3b6a2c9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import json\n",
     "import os \n",
@@ -33,12 +44,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "1ece24fd",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Useful material \n",
-    "# SQuAD Evaluation guidelines: \n",
+    "# SQuAD Evaluation guidelines: \n",
     "# https://worksheets.codalab.org/worksheets/0x8212d84ca41c4150b555a075b19ccc05/\n",
     "# https://rajpurkar.github.io/SQuAD-explorer/"
    ]
