fix path in different places and remove redundant prints

--- a/nb_experiments.ipynb
+++ b/nb_experiments.ipynb
@@ -7,6 +7,14 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/mariadancianu/Desktop/Git Projects/RAG-Optimization/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "True"
@@ -251,8 +259,8 @@
     "rag = CustomRAG(knowledge_base=langchain_docs, \n",
     "                prompt_message=prompt_message,\n",
     "                config=parameters_dict, \n",
-    "                results_folder='/Users/mariadancianu/Desktop/Git Projects/SQuAD_RAG_experiments/eval_results/test_new_class', \n",
-    "                vector_db_folder='/Users/mariadancianu/Desktop/Git Projects/SQuAD_RAG_experiments/vector_databases/test_new_class')"
+    "                results_folder='/eval_results/test_new_class', \n",
+    "                vector_db_folder='/vector_databases/test_new_class')"
    ]
   },
   {
@@ -397,22 +405,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d407aed2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_all_res = collect_all_results('/Users/mariadancianu/Desktop/Git Projects/SQuAD_RAG_experiments/eval_results/initial_eval_results')\n",
+    "path = \"eval_results/test_new_class\"\n",
+    "df_all_res = collect_all_results(path)\n",
     "df_all_res.sort_values(by=\"HasAns_f1\", ascending=False, inplace=True)\n",
-    "df_all_res.to_csv(\"eval_results/initial_eval_results/df_all_results.csv\", index=False)"
+    "df_all_res.to_csv(f\"{path}/df_all_results.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f78f94bb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>exact</th>\n",
+       "      <th>f1</th>\n",
+       "      <th>total</th>\n",
+       "      <th>HasAns_exact</th>\n",
+       "      <th>HasAns_f1</th>\n",
+       "      <th>HasAns_total</th>\n",
+       "      <th>NoAns_exact</th>\n",
+       "      <th>NoAns_f1</th>\n",
+       "      <th>NoAns_total</th>\n",
+       "      <th>experiment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>49.6</td>\n",
+       "      <td>54.188264</td>\n",
+       "      <td>500</td>\n",
+       "      <td>61.603376</td>\n",
+       "      <td>71.283257</td>\n",
+       "      <td>237</td>\n",
+       "      <td>38.783270</td>\n",
+       "      <td>38.783270</td>\n",
+       "      <td>263</td>\n",
+       "      <td>eval_pred_400_text-embedding-3-small_gpt-3.5-t...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>50.0</td>\n",
+       "      <td>55.196172</td>\n",
+       "      <td>500</td>\n",
+       "      <td>59.493671</td>\n",
+       "      <td>70.456060</td>\n",
+       "      <td>237</td>\n",
+       "      <td>41.444867</td>\n",
+       "      <td>41.444867</td>\n",
+       "      <td>263</td>\n",
+       "      <td>eval_pred_200_text-embedding-3-small_gpt-3.5-t...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>44.6</td>\n",
+       "      <td>49.323149</td>\n",
+       "      <td>500</td>\n",
+       "      <td>59.493671</td>\n",
+       "      <td>69.458120</td>\n",
+       "      <td>237</td>\n",
+       "      <td>31.178707</td>\n",
+       "      <td>31.178707</td>\n",
+       "      <td>263</td>\n",
+       "      <td>eval_pred_500_text-embedding-3-small_gpt-3.5-t...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>43.4</td>\n",
+       "      <td>48.797472</td>\n",
+       "      <td>500</td>\n",
+       "      <td>56.962025</td>\n",
+       "      <td>68.349097</td>\n",
+       "      <td>237</td>\n",
+       "      <td>31.178707</td>\n",
+       "      <td>31.178707</td>\n",
+       "      <td>263</td>\n",
+       "      <td>eval_pred_600_text-embedding-3-small_gpt-3.5-t...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>50.6</td>\n",
+       "      <td>54.960261</td>\n",
+       "      <td>500</td>\n",
+       "      <td>46.413502</td>\n",
+       "      <td>55.612365</td>\n",
+       "      <td>237</td>\n",
+       "      <td>54.372624</td>\n",
+       "      <td>54.372624</td>\n",
+       "      <td>263</td>\n",
+       "      <td>eval_pred_100_text-embedding-3-small_gpt-3.5-t...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   exact         f1  total  HasAns_exact  HasAns_f1  HasAns_total  \\\n",
+       "3   49.6  54.188264    500     61.603376  71.283257           237   \n",
+       "2   50.0  55.196172    500     59.493671  70.456060           237   \n",
+       "1   44.6  49.323149    500     59.493671  69.458120           237   \n",
+       "0   43.4  48.797472    500     56.962025  68.349097           237   \n",
+       "4   50.6  54.960261    500     46.413502  55.612365           237   \n",
+       "\n",
+       "   NoAns_exact   NoAns_f1  NoAns_total  \\\n",
+       "3    38.783270  38.783270          263   \n",
+       "2    41.444867  41.444867          263   \n",
+       "1    31.178707  31.178707          263   \n",
+       "0    31.178707  31.178707          263   \n",
+       "4    54.372624  54.372624          263   \n",
+       "\n",
+       "                                          experiment  \n",
+       "3  eval_pred_400_text-embedding-3-small_gpt-3.5-t...  \n",
+       "2  eval_pred_200_text-embedding-3-small_gpt-3.5-t...  \n",
+       "1  eval_pred_500_text-embedding-3-small_gpt-3.5-t...  \n",
+       "0  eval_pred_600_text-embedding-3-small_gpt-3.5-t...  \n",
+       "4  eval_pred_100_text-embedding-3-small_gpt-3.5-t...  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_all_res"
    ]
@@ -458,7 +598,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! python eval_results/evaluation.py \"/Users/mariadancianu/Desktop/Git Projects/SQuAD_RAG_experiments/eval_results/data_updated_500.json\" \"/Users/mariadancianu/Desktop/Git Projects/SQuAD_RAG_experiments/eval_results/debugging_eval_results/pred_500_400_text-embedding-3-large_gpt-3.5-turbo.json\""
+    "! python $(pwd)/eval_results/evaluation.py \"$(pwd)/eval_results/data_updated_500.json\" \"$(pwd)/eval_results/debugging_eval_results/pred_500_400_text-embedding-3-large_gpt-3.5-turbo.json\""
    ]
   },
   {
