added cloud-based support through replica

--- a/nb_experiments.ipynb
+++ b/nb_experiments.ipynb
@@ -42,18 +42,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "953814b1",
    "metadata": {},
-   "outputs": [],
    "source": [
     "%load_ext autoreload"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "1ece24fd",
    "metadata": {},
    "outputs": [],
@@ -254,7 +252,7 @@
     "        }\n",
     "}\n",
     "\n",
-    "df_to_test = df[0:2]\n",
+    "df_to_test = df[0:10]\n",
     "\n",
     "rag = CustomRAG(knowledge_base=langchain_docs, \n",
     "                prompt_message=prompt_message,\n",
@@ -405,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d407aed2",
    "metadata": {},
    "outputs": [],
@@ -418,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f78f94bb",
    "metadata": {},
    "outputs": [
@@ -672,19 +670,44 @@
    "execution_count": null,
    "id": "1e53f063",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fine tuning RAG with the following parameters: \n",
+      "{'chunk_sizes': [400],\n",
+      " 'embed_options': {'text-embedding-3-small': 'OpenAI'},\n",
+      " 'models': {'meta/meta-llama-3-70b-instruct': 'Replicate'}}\n",
+      "Running meta/meta-llama-3-70b-instruct - 400 - text-embedding-3-small\n",
+      "(\"CustomRAG config: {'chunk_size': 400, 'chunk_overlap': 15, \"\n",
+      " \"'vector_database': 'chromadb', 'embeddings_function': {'model_name': \"\n",
+      " \"'text-embedding-3-small', 'platform': 'OpenAI'}, 'llm': {'model_name': \"\n",
+      " \"'meta/meta-llama-3-70b-instruct', 'client': 'Replicate'}}\")\n",
+      "Creating vector store 400_text-embedding-3-small\n",
+      "Finished creating vector store 400_text-embedding-3-small\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  1%|          | 3/500 [00:03<10:24,  1.26s/it]"
+     ]
+    }
+   ],
    "source": [
     "# run the RAG with best parameters, and save also the context\n",
     "parameters_dict = {\n",
     "    \"chunk_sizes\": [400],\n",
     "    \"embed_options\": { \n",
-    "        \"text-embedding-3-large\": \"OpenAI\", \n",
+    "        \"text-embedding-3-small\": \"OpenAI\", \n",
     "        },\n",
-    "    \"models\": {\"mistral-large-latest\": \"Mistral\"}\n",
+    "    \"models\": {\"meta/meta-llama-3-70b-instruct\": \"Replicate\"}\n",
     "}\n",
     "\n",
     "results_folder = os.path.join(os.getcwd(), \"eval_results/optimize_results\")\n",
-    "vector_db_folder = os.path.join(os.getcwd(), \"vector_dabases/optimize_results\")\n",
+    "vector_db_folder = os.path.join(os.getcwd(), \"vector_databases\")\n",
     "\n",
     "if not os.path.exists(results_folder):\n",
     "    os.mkdir(results_folder)\n",
@@ -698,7 +721,7 @@
     "    df_to_test, \n",
     "    langchain_docs, \n",
     "    parameters_dict,\n",
-    "    results_fodler=results_folder, \n",
+    "    results_folder=results_folder, \n",
     "    vector_db_folder=vector_db_folder\n",
     ")"
    ]
@@ -738,7 +761,7 @@
     "}\n",
     "\n",
     "results_folder = os.path.join(os.getcwd(), \"eval_results/optimize_results\")\n",
-    "vector_db_folder = os.path.join(os.getcwd(), \"vector_dabases/optimize_results\")\n",
+    "vector_db_folder = os.path.join(os.getcwd(), \"vector_databases/optimize_results\")\n",
     "\n",
     "if not os.path.exists(results_folder):\n",
     "    os.mkdir(results_folder)\n",
@@ -755,6 +778,90 @@
     "    results_fodler=results_folder, \n",
     "    vector_db_folder=vector_db_folder\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "344d8d63",
+   "metadata": {},
+   "source": [
+    "# Explore replicate "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f2f6a9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# allows to run generative AI models in the Cloud \n",
+    "# Claude-3-5-sonnet is the best llm for short context (less than 5k tokens) according to this research: https://www.galileo.ai/blog/best-llms-for-rag\n",
+    "# the second one is llama-3-70b-instruct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6638f69b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "custom_system_prompt = f\"\"\"\n",
+    "You are a highly accurate and reliable assistant. Answer the user's question using **only** the provided context.\n",
+    "If the answer is not in the context, return an empty response (**\"\"**) without making up information.\n",
+    "\n",
+    "Context:\n",
+    "%s\n",
+    "\n",
+    "Instructions:\n",
+    "- Answer concisely and precisely.\n",
+    "- If the answer is explicitly stated in the context, extract it as-is.\n",
+    "- If the answer is not in the context, return **\"\"** (empty string).\n",
+    "- Do **not** infer, assume, or add external information.\n",
+    "\n",
+    "Example:\n",
+    "    **Question:** What is the capital of Italy?\n",
+    "    **Answer:** Rome\n",
+    "\n",
+    "Question: %s\n",
+    "Answer (just the answer, no extra words, or \"\" if unknown):\n",
+    "\"\"\"\n",
+    "\n",
+    "query = \"Who were the normans?\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "b25697d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import replicate\n",
+    "\n",
+    "output = replicate.run(\n",
+    "   # \"anthropic/claude-3.5-sonnet\", \n",
+    "   \"meta/meta-llama-3-70b-instruct\",\n",
+    "    input={\n",
+    "    \"prompt\": query,\n",
+    "    \"system_prompt\": custom_system_prompt,\n",
+    "    \"max_tokens\": 512,\n",
+    "    \"prompt_template\": \"<|begin_of_text|><|start_header_id|>system<|end_header_id|>\\n\\n{system_prompt}<|eot_id|><|start_header_id|>user<|end_header_id|>\\n\\n{prompt}<|eot_id|><|start_header_id|>assistant<|end_header_id|>\\n\\n\".format(system_prompt=custom_system_prompt, prompt=\"{prompt}\"),})\n",
+    "\n",
+    "output_merged = \"\".join(s for s in output if s not in ['\\n', '\\t', '\\r', '\"\"'])\n",
+    "output_merged"
    ]
   }
  ],
