add new llm results with claude-3.5-sonnet

--- a/nb_experiments.ipynb
+++ b/nb_experiments.ipynb
@@ -2,17 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b0accd0d-fb0b-4c5e-be02-8063d3b6a2c9",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/mariadancianu/Desktop/Git Projects/RAG-Optimization/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,28 +693,18 @@
      "text": [
       "  0%|          | 0/500 [00:00<?, ?it/s]/Users/mariadancianu/Desktop/Git Projects/RAG-Optimization/rag_optimization.py:295: LangChainDeprecationWarning: The class `Chroma` was deprecated in LangChain 0.2.9 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-chroma package and should be used instead. To use it run `pip install -U :class:`~langchain-chroma` and import as `from :class:`~langchain_chroma import Chroma``.\n",
       "  db = Chroma(\n",
-      " 13%|█▎        | 67/500 [02:00<11:36,  1.61s/it]No relevant docs were retrieved using the relevance score threshold 0.1\n",
-      " 14%|█▍        | 71/500 [02:05<09:42,  1.36s/it]No relevant docs were retrieved using the relevance score threshold 0.1\n",
-      " 14%|█▍        | 72/500 [02:06<09:32,  1.34s/it]No relevant docs were retrieved using the relevance score threshold 0.1\n",
-      " 16%|█▋        | 82/500 [02:22<10:33,  1.51s/it]/Users/mariadancianu/Desktop/Git Projects/RAG-Optimization/.venv/lib/python3.12/site-packages/langchain_core/vectorstores/base.py:1076: UserWarning: Relevance scores must be between 0 and 1, got [(Document(metadata={'start_index': 428, 'title': 'Normans'}, page_content=\". Having spent time at the court of Henry I of England (married to David's sister Maud of Scotland), and needing them to wrestle the kingdom from his half-brother Máel Coluim mac Alaxandair, David had to reward many with lands. The process was continued under David's successors, most intensely of all under William the Lion\"), -0.032232881102496336), (Document(metadata={'start_index': 691, 'title': 'Huguenot'}, page_content='. They were very successful at marriage and property speculation. After petitioning the British Crown in 1697 for the right to own land in the Baronies, they prospered as slave owners on the Cooper, Ashepoo, Ashley and Santee River plantations they purchased from the British Landgrave Edmund Bellinger'), -0.04168380611888223), (Document(metadata={'start_index': 663, 'title': 'Scottish_Parliament'}, page_content='dissolved by the Queen by royal proclamation'), -0.04272255734728181)]\n",
+      " 13%|█▎        | 67/500 [02:01<11:47,  1.63s/it]No relevant docs were retrieved using the relevance score threshold 0.1\n",
+      " 14%|█▍        | 71/500 [02:07<11:16,  1.58s/it]No relevant docs were retrieved using the relevance score threshold 0.1\n",
+      " 14%|█▍        | 72/500 [02:08<10:31,  1.47s/it]No relevant docs were retrieved using the relevance score threshold 0.1\n",
+      " 16%|█▋        | 82/500 [02:23<09:46,  1.40s/it]/Users/mariadancianu/Desktop/Git Projects/RAG-Optimization/.venv/lib/python3.12/site-packages/langchain_core/vectorstores/base.py:1076: UserWarning: Relevance scores must be between 0 and 1, got [(Document(metadata={'start_index': 428, 'title': 'Normans'}, page_content=\". Having spent time at the court of Henry I of England (married to David's sister Maud of Scotland), and needing them to wrestle the kingdom from his half-brother Máel Coluim mac Alaxandair, David had to reward many with lands. The process was continued under David's successors, most intensely of all under William the Lion\"), -0.032232881102496336), (Document(metadata={'start_index': 691, 'title': 'Huguenot'}, page_content='. They were very successful at marriage and property speculation. After petitioning the British Crown in 1697 for the right to own land in the Baronies, they prospered as slave owners on the Cooper, Ashepoo, Ashley and Santee River plantations they purchased from the British Landgrave Edmund Bellinger'), -0.04168380611888223), (Document(metadata={'start_index': 663, 'title': 'Scottish_Parliament'}, page_content='dissolved by the Queen by royal proclamation'), -0.04272255734728181)]\n",
       "  self.vectorstore.similarity_search_with_relevance_scores(\n",
       "No relevant docs were retrieved using the relevance score threshold 0.1\n",
-      " 17%|█▋        | 83/500 [02:23<09:39,  1.39s/it]/Users/mariadancianu/Desktop/Git Projects/RAG-Optimization/.venv/lib/python3.12/site-packages/langchain_core/vectorstores/base.py:1076: UserWarning: Relevance scores must be between 0 and 1, got [(Document(metadata={'start_index': 387, 'title': 'Normans'}, page_content=\". Because of this, Ethelred fled to Normandy in 1013, when he was forced from his kingdom by Sweyn Forkbeard. His stay in Normandy (until 1016) influenced him and his sons by Emma, who stayed in Normandy after Cnut the Great's conquest of the isle.\"), 0.03713594251200791), (Document(metadata={'start_index': 367, 'title': 'Normans'}, page_content='. He appointed Robert of Jumièges archbishop of Canterbury and made Ralph the Timid earl of Hereford. He invited his brother-in-law Eustace II, Count of Boulogne to his court in 1051, an event which resulted in the greatest of early conflicts between Saxon and Norman and ultimately resulted in the exile of Earl Godwin of Wessex.'), -0.015412579623980793), (Document(metadata={'start_index': 0, 'title': 'Normans'}, page_content='The Normans were in contact with England from an early date. Not only were their original Viking brethren still ravaging the English coasts, they occupied most of the important ports opposite England across the English Channel. This relationship eventually produced closer ties of blood through the marriage of Emma, sister of Duke Richard II of Normandy, and King Ethelred II of England'), -0.027277844710464683)]\n",
+      " 17%|█▋        | 83/500 [02:24<09:03,  1.30s/it]/Users/mariadancianu/Desktop/Git Projects/RAG-Optimization/.venv/lib/python3.12/site-packages/langchain_core/vectorstores/base.py:1076: UserWarning: Relevance scores must be between 0 and 1, got [(Document(metadata={'start_index': 387, 'title': 'Normans'}, page_content=\". Because of this, Ethelred fled to Normandy in 1013, when he was forced from his kingdom by Sweyn Forkbeard. His stay in Normandy (until 1016) influenced him and his sons by Emma, who stayed in Normandy after Cnut the Great's conquest of the isle.\"), 0.03713594251200791), (Document(metadata={'start_index': 367, 'title': 'Normans'}, page_content='. He appointed Robert of Jumièges archbishop of Canterbury and made Ralph the Timid earl of Hereford. He invited his brother-in-law Eustace II, Count of Boulogne to his court in 1051, an event which resulted in the greatest of early conflicts between Saxon and Norman and ultimately resulted in the exile of Earl Godwin of Wessex.'), -0.015412579623980793), (Document(metadata={'start_index': 0, 'title': 'Normans'}, page_content='The Normans were in contact with England from an early date. Not only were their original Viking brethren still ravaging the English coasts, they occupied most of the important ports opposite England across the English Channel. This relationship eventually produced closer ties of blood through the marriage of Emma, sister of Duke Richard II of Normandy, and King Ethelred II of England'), -0.027277844710464683)]\n",
       "  self.vectorstore.similarity_search_with_relevance_scores(\n",
       "No relevant docs were retrieved using the relevance score threshold 0.1\n",
-      " 21%|██        | 106/500 [03:00<09:43,  1.48s/it]No relevant docs were retrieved using the relevance score threshold 0.1\n",
-      " 23%|██▎       | 113/500 [03:12<10:50,  1.68s/it]No relevant docs were retrieved using the relevance score threshold 0.1\n",
-      " 23%|██▎       | 114/500 [03:14<10:04,  1.57s/it]No relevant docs were retrieved using the relevance score threshold 0.1\n",
-      " 23%|██▎       | 116/500 [03:16<09:11,  1.44s/it]No relevant docs were retrieved using the relevance score threshold 0.1\n",
-      " 24%|██▍       | 120/500 [03:22<09:29,  1.50s/it]/Users/mariadancianu/Desktop/Git Projects/RAG-Optimization/.venv/lib/python3.12/site-packages/langchain_core/vectorstores/base.py:1076: UserWarning: Relevance scores must be between 0 and 1, got [(Document(metadata={'start_index': 199, 'title': 'Normans'}, page_content='. King David I of Scotland, whose elder brother Alexander I had married Sybilla of Normandy, was instrumental in introducing Normans and Norman culture to Scotland, part of the process some scholars call the \"Davidian Revolution\"'), 0.04501040680669233), (Document(metadata={'start_index': 428, 'title': 'Normans'}, page_content=\". Having spent time at the court of Henry I of England (married to David's sister Maud of Scotland), and needing them to wrestle the kingdom from his half-brother Máel Coluim mac Alaxandair, David had to reward many with lands. The process was continued under David's successors, most intensely of all under William the Lion\"), -0.0025835846994466394), (Document(metadata={'start_index': 290, 'title': 'Yuan_dynasty'}, page_content='. The Mongol custom of long standing quda/marriage alliance with Mongol clans, the Onggirat, and the Ikeres, kept the imperial blood purely Mongol until the reign of Tugh Temur, whose mother was a Tangut concubine. The Mongol Emperors had built large palaces and pavilions, but some still continued to live as nomads at times'), -0.048765656780470845)]\n",
-      "  self.vectorstore.similarity_search_with_relevance_scores(\n",
-      "No relevant docs were retrieved using the relevance score threshold 0.1\n",
-      " 31%|███       | 153/500 [04:13<08:18,  1.44s/it]No relevant docs were retrieved using the relevance score threshold 0.1\n",
-      " 31%|███       | 156/500 [04:18<09:35,  1.67s/it]/Users/mariadancianu/Desktop/Git Projects/RAG-Optimization/.venv/lib/python3.12/site-packages/langchain_core/vectorstores/base.py:1076: UserWarning: Relevance scores must be between 0 and 1, got [(Document(metadata={'start_index': 1802, 'title': 'Pharmacy'}, page_content='. He made clear distinction between sodium carbonate and potassium carbonate, and drew attention to the poisonous nature of copper compounds, especially copper vitriol, and also lead compounds. He also describes the distillation of sea-water for drinking.[verification needed]'), 0.10854281913310504), (Document(metadata={'start_index': 723, 'title': 'French_and_Indian_War'}, page_content='. When Clinton did not respond to his satisfaction, Chief Hendrick said that the \"Covenant Chain\", a long-standing friendly relationship between the Iroquois Confederacy and the British Crown, was broken.'), 0.029425345164333927), (Document(metadata={'start_index': 538, 'title': 'Oxygen'}, page_content='2. This method of welding and cutting metal later became common.'), -0.015536912827087912)]\n",
-      "  self.vectorstore.similarity_search_with_relevance_scores(\n",
-      " 32%|███▏      | 158/500 [04:20<07:32,  1.32s/it]/Users/mariadancianu/Desktop/Git Projects/RAG-Optimization/.venv/lib/python3.12/site-packages/langchain_core/vectorstores/base.py:1076: UserWarning: Relevance scores must be between 0 and 1, got [(Document(metadata={'start_index': 382, 'title': 'Normans'}, page_content='. But Isaac changed his mind and tried to escape. Richard then proceeded to conquer the whole island, his troops being led by Guy de Lusignan. Isaac surrendered and was confined with silver chains, because Richard had promised that he would not place him in irons. By 1 June, Richard had conquered the whole island'), 0.136839117405258), (Document(metadata={'start_index': 0, 'title': 'Normans'}, page_content='Various princes of the Holy Land arrived in Limassol at the same time, in particular Guy de Lusignan. All declared their support for Richard provided that he support Guy against his rival Conrad of Montferrat. The local barons abandoned Isaac, who considered making peace with Richard, joining him on the crusade, and offering his daughter in marriage to the person named by Richard'), 0.036225401996778595), (Document(metadata={'start_index': 428, 'title': 'Normans'}, page_content=\". Having spent time at the court of Henry I of England (married to David's sister Maud of Scotland), and needing them to wrestle the kingdom from his half-brother Máel Coluim mac Alaxandair, David had to reward many with lands. The process was continued under David's successors, most intensely of all under William the Lion\"), -0.031048301778249243)]\n",
-      "  self.vectorstore.similarity_search_with_relevance_scores(\n",
-      " 40%|████      | 201/500 [05:33<07:23,  1.48s/it]"
+      " 21%|██        | 106/500 [03:08<11:09,  1.70s/it]No relevant docs were retrieved using the relevance score threshold 0.1\n",
+      " 23%|██▎       | 113/500 [03:22<15:00,  2.33s/it]No relevant docs were retrieved using the relevance score threshold 0.1\n",
+      " 23%|██▎       | 114/500 [03:23<12:36,  1.96s/it]"
      ]
     }
    ],
@@ -758,7 +756,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# very slow - likely due to GPU/CPU memory issues"
+    "# very slow - likely due to GPU/CPU memory issues\n",
+    "# TODO: use cloud computing"
    ]
   },
   {
